# aldalog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CSOUND_AUDIO.md  Makefile  PROJECT_REVIEW.md  README.md  TODO.md
.aldalog/csound/: default.csd
.aldev/: init.lua
.aldev/modules/: languages.lua  theme.lua
.github/workflows/: build.yml
.psnd/: init.lua
.psnd/lib/scm/scheme/: box.sld  list.scm  list.sld
.psnd/lib/scm/srfi/: 1.sld  232.scm  259.sld  26.sld  35.scm
.psnd/modules/: bog.lua  joy.lua  tr7.lua
docs/: LANG_IMPL_COMPARISON.md  README.md  arch-highlevel.d2  cheatsheet-tracker.md  csound-deps.md  language-extension-api.md  new_lang.md  refactor.md
docs/_dev/: new_lang.md
docs/bog/: README.md  bog_repl.md
docs/csound/: csound-deps.md  csound_audio.md  csound_plan.md
docs/joy/: README.md
docs/tr7/: README.md
include/loki/: link.h  midi_export.h
scripts/: new_lang.py  new_lang_peg.py
scripts/cmake/: psnd_alda_library.cmake  psnd_joy_library.cmake  psnd_languages.cmake  psnd_loki_library.cmake  psnd_psnd_binary.cmake  psnd_shared_library.cmake  psnd_tests.cmake
source/: CMakeLists.txt
source/core/: CMakeLists.txt  lang_config.h  lang_dispatch.c  lang_dispatch.h  main.c  repl.c
source/core/include/loki/: lua.h
source/core/loki/: async_queue.c  async_queue.h  buffers.c  cli.c  cli.h  command.c  core.c  editor.c  export.c  export.h  host.c  host_web.c  host_web_ui.h  host_web_xterm.h  host_webview.cpp  host_webview.h  internal.h  lang_bridge.c  lang_bridge.h  languages.c  link.c  live_loop.c  live_loop.h  lua.c  midi_export.cpp  modal.c  repl_launcher.c  serialize.h  session.c  session.h
source/core/loki/command/: command_impl.h  export.c  loop.c  plugin.c
source/core/loki/syntax/: lang_bog.h  lang_haskell.h
source/core/shared/: context.c  context.h  repl_commands.c
source/core/shared/async/: shared_async.c  shared_async.h
source/core/shared/audio/: audio.h  minihost_backend.c  minihost_backend.h  tsf_backend.c
source/core/shared/link/: link.c  link.h
source/core/tests/cli/: CMakeLists.txt
source/core/tests/loki/: CMakeLists.txt  test_async_queue.c  test_buffers.c  test_core.c  test_lang_registration.c  test_lua_api.c  test_row_operations.c  test_selection.c  test_syntax.c
source/core/tests/shared/: CMakeLists.txt  test_csound_backend.c  test_minihost_backend.c  test_tsf_backend.c
source/core/tests/tracker/: CMakeLists.txt  test_audio.c
source/core/tracker/: tracker_audio.c  tracker_audio.h  tracker_plugin_notes.c  tracker_view.c  tracker_view.h  tracker_view_clipboard.c  tracker_view_terminal.c
source/langs/: CMakeLists.txt
source/langs/alda/: CMakeLists.txt  README.md  async.c  register.c  repl.c
source/langs/alda/impl/: context.c
source/langs/alda/include/alda/: async.h  error.h  parser.h
source/langs/alda/tests/: CMakeLists.txt  test_backends.c  test_integration.c  test_interpreter.c  test_microtuning.c  test_parser.c  test_scanner.c
source/langs/bog/: CMakeLists.txt  register.c  repl.c
source/langs/bog/tests/: CMakeLists.txt  test_tokenizer.c
source/langs/joy/: CMakeLists.txt  register.c  repl.c
source/langs/joy/midi/: joy_async.c  joy_midi_backend.c  midi_primitives.c
source/langs/joy/music/: music_context.c
source/langs/joy/tests/: CMakeLists.txt  test_lexer.c  test_midi.c  test_parser.c  test_primitives.c
source/langs/mhs/: CMakeLists.txt  README.md  repl.c  vfs.c
source/langs/tr7/: CMakeLists.txt
source/langs/tr7/impl/: register.c  repl.c
source/langs/tr7/tests/: CMakeLists.txt  test_reader.c
source/testing/: CMakeLists.txt
src/: lang_config.h  loki_alda.c  loki_alda.h  loki_command.c  loki_command.h  loki_core.c  loki_editor.c  loki_link.c  loki_lua.c  loki_midi_export.cpp  loki_modal.c  loki_selection.c  loki_selection.h  main.c  repl.c  repl.h
src/alda/: error.c  parser.c
src/joy/: joy_midi_backend.c  joy_midi_backend.h  midi_primitives.c  midi_primitives.h
src/lang/alda/: register.c  repl.c
src/lang/bog/: bog_async.c  bog_async.h  repl.c
src/lang/joy/: register.c  repl.c
src/lang/joy/midi/: joy_midi_backend.c  joy_midi_backend.h  midi_primitives.c  midi_primitives.h
src/lang/joy/music/: music_context.h  music_notation.c
src/lang/tr7/: register.c  repl.c
src/loki/: alda.c  buffers.c  command.c  core.c  editor.c  export.c  internal.h  joy.c  lang_bridge.c  lang_bridge.h  languages.c  lua.c  modal.c  repl_launcher.c  repl_launcher.h  selection.c  syntax.c
src/loki/command/: basic.c  csd.c  export.c
src/loki/lang/: tr7.c
src/shared/: context.c  repl_commands.c
src/shared/audio/: csound_backend.c
src/shared/link/: link.c
tests/: test_command.c  test_row_operations.c  test_selection.c  test_terminal.c  test_undo.c
tests/alda/: CMakeLists.txt  test_backends.c  test_integration.c  test_parser.c
tests/alda/shared_suite/: README.md
tests/joy/: CMakeLists.txt  test_midi.c  test_parser.c  test_primitives.c
tests/loki/: CMakeLists.txt  test_buffers.c  test_command.c  test_file_io.c  test_indent.c  test_lua_api.c  test_modal.c  test_search.c  test_serialize.c  test_undo.c
